feature/updated-UI-feed-three

--- a/src/styles/pages/_feed.scss
+++ b/src/styles/pages/_feed.scss
@@ -4,11 +4,13 @@
   margin: 50px 50px
     /* grid-template-rows: 100px 100px; */
 }
-.feed{
+
+.feed {
   max-width: 1440px;
   display: flex;
   align-items: center;
 }
+
 .feed__container>div {
   margin: 10px;
 }
@@ -78,20 +80,22 @@
   color: #606060;
 }
 
-.feed__profile--dots{
+.feed__profile--dots {
   width: 100%;
   height: 23px;
   line-height: 23px;
 
   display: flex;
   align-items: center;
-  div{
+
+  div {
     width: 4px;
     height: 4px;
-    background-color:  #979797;
+    background-color: #979797;
     border-radius: 50%;
   }
 }
+
 .feed__profile--like {
   display: flex;
   align-items: center;
@@ -105,26 +109,28 @@
 .profile-bottom {
   display: grid;
   grid-template-columns: auto auto auto;
-  margin: 15px;
+  margin: 0 15px 15px 15px;
   border-top: 1px solid #E6E6E6;
-  padding: 20px;
+  padding: 15px;
 }
 
 .profile__bottom--recipes {
   grid-column: 1/2;
-  position: relative;
 
   h2:first-child {
-    position: absolute;
-    top: 25%;
-    left: 25%;
+    display: flex;
+    font-weight: 550;
+    justify-content: center;
+    align-items: center;
     color: #030F09;
     font-size: 20px;
-    transform: translate(-50%, -50%);
   }
 
   div:last-child {
-    margin-top: 25px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #030F09;
     opacity: 0.5;
     font-size: 16px;
@@ -133,19 +139,21 @@
 
 .profile__bottom--saved {
   grid-column: 2/3;
-  position: relative;
- 
+
   h2:first-child {
-    position: absolute;
-    top: 25%;
-    left: 25%;
+    font-weight: 550;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #030F09;
     font-size: 20px;
-    transform: translate(-50%, -50%);
   }
 
   div:last-child {
-    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
     color: #030F09;
     opacity: 0.5;
     font-size: 16px;
@@ -154,20 +162,23 @@
 
 .profile__bottom--following {
   grid-column: 3/4;
-  position: relative;
   color: #030F09;
   font-size: 20px;
+
   h2:first-child {
-    position: absolute;
-    top: 25%;
-    left: 25%;
+    font-weight: 550;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #030F09;
     font-size: 20px;
-    transform: translate(-50%, -50%);
   }
 
   div:last-child {
-    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
     color: #030F09;
     opacity: 0.5;
     font-size: 16px;
@@ -185,12 +196,12 @@
     margin-left: 10px;
     width: 100%;
     height: 25px;
-    font-weight: 600;
+    font-weight: 550;
     font-size: 16px;
   }
 
   ul li {
-    
+
     height: 22px;
     font-size: 14px;
     color: #606060;
@@ -243,7 +254,7 @@
   border-radius: 8px;
   margin: 15px;
   background-color: white;
-  box-shadow: 0 6px 20px 0 rgba(13,51,32,0.10);
+  box-shadow: 0 6px 20px 0 rgba(13, 51, 32, 0.10);
 }
 
 .feed__card--top {
@@ -264,7 +275,7 @@
 
 .card__top-name {
   grid-column: 2/3;
-  width: auto ;
+  width: auto;
   height: auto;
   margin-left: 15px;
 
@@ -274,7 +285,7 @@
   }
 
   p {
-    
+
     font-size: 12px;
     color: #606060;
   }
@@ -366,7 +377,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 8px;
-padding: 25px;
+  padding: 25px;
+
   ul li {
     font-size: 14px;
     color: #030F09;
@@ -377,18 +389,19 @@ padding: 25px;
     cursor: pointer;
   }
 
-  
-  
+
+
 }
 
-.feed__modal--Veggies{
+.feed__modal--Veggies {
   position: relative;
   opacity: 0.99;
   border-radius: 8px;
   width: 100%;
   cursor: pointer;
 }
-.feed__modal--Veggies::before{
+
+.feed__modal--Veggies::before {
   content: "";
   position: absolute;
   width: 256px;
@@ -398,19 +411,20 @@ padding: 25px;
   z-index: -1;
   opacity: 0.2;
   cursor: pointer;
-  background-color: #30BE76 ;
+  background-color: #30BE76;
 }
+
 .card-main {
 
   opacity: 0.8;
-  background: rgba(40,41,40,0.50);
+  background: rgba(40, 41, 40, 0.50);
 }
 
 .feed__modal--title {
   font-size: 20px;
   font-weight: 700;
   width: 150px;
-  
+
 }
 
 .feed__modal--icon {
@@ -427,7 +441,7 @@ padding: 25px;
   margin-top: 15px;
   border: none;
   color: #30BE76;
-   padding: 0px;
+  padding: 0px;
   background-color: white;
 }
 
@@ -477,17 +491,17 @@ padding: 25px;
   height: 250px;
   position: relative;
   margin: 5px;
-  box-shadow: 0 6px 20px 0 rgba(13,51,32,0.10);
+  box-shadow: 0 6px 20px 0 rgba(13, 51, 32, 0.10);
 }
 
 .card__follow--background {
   width: 100%;
   height: 110px;
-  object-fit: cover; 
+  object-fit: cover;
 }
 
 .card__follow--avt {
-  object-fit: cover; 
+  object-fit: cover;
   position: absolute;
   width: 80px;
   height: 80px;
@@ -569,28 +583,35 @@ padding: 25px;
     width: 100%;
     height: 152px;
     border-radius: 8px;
-    object-fit: cover; 
+    object-fit: cover;
   }
 }
-.feed__right--avt{
+
+.feed__right--avt {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
 }
-.feed__right-avt--one{
+
+.feed__right-avt--one {
   grid-column: 1/2;
 }
-.feed__right-avt--tưo{
+
+.feed__right-avt--tưo {
   grid-column: 2/3;
 }
-.feed__right-avt--three{
+
+.feed__right-avt--three {
   grid-column: 3/4;
 }
-.feed__right-avt--four{
+
+.feed__right-avt--four {
   grid-column: 4/5;
 }
-.feed__right-avt--five{
+
+.feed__right-avt--five {
   grid-column: 5/6;
 }
+
 .feed__right--contact {
   width: 100%;
   height: 113px;
